<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_new_note"
        android:orderInCategory="100"
        android:title="@string/new_note_menu_label"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="101"
        android:title="@string/delete_all_notes_menu_item"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="102"
        android:title="@string/about_menu_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="103"
        android:title="@string/log_out_menu_label"
        app:showAsAction="never" />
</menu>
